Configure resource server